src/test/resources/tests/typeError/treeMapWithUncomparableKeyType.qg

init {
    set = treeMap(:List<number>, :number)
}

run true

input(a,b) true